--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -3,11 +3,16 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Here is our secret Page.</p>
+    <h1 class="display-3">You've Discovered My Secrets!</h1>
+
+    <% usersWithSecret.forEach(function(user) { %>
+      <% user.secrets.forEach(function(secret) { %>
+        <p class="secret-text"><%= secret %></p>
+      <% }) %>
+    <% }) %>
     <hr>
-    
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+
+    <a class="btn btn-light btn-lg" href="/logout" role="button" name="logout">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
   </div>
 </div>
