--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -1,20 +1,16 @@
 <%- include('partials/header') %>
 
-<div class="container">
-  <div class="jumbotron centered">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Secrets</h1>
-    <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
-
+<div class="jumbotron text-center">
+  <div class="container">
+    <h1 class="display-4">Submit Your Secret</h1>
     <form action="/submit" method="POST">
-
       <div class="form-group">
-        <input type="text" class="form-control text-center" name="secret" placeholder="What's your secret?">
+        <label for="secret">Secret</label>
+        <input type="text" class="form-control" id="secret" name="secret" required>
       </div>
-      <button type="submit" class="btn btn-dark">Submit</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-
-
   </div>
 </div>
+
 <%- include('partials/footer') %>
